# immich-video-memory-generator

./: .env.example  .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  E2E_TEST_UPDATE_NOTES.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  THIRD_PARTY_NOTICES  codecov.yml  complexipy-snapshot.json  complexipy_results_2026_03_26__10-18-53.json  docker-compose.yml  justfile  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  benchmark.yml  ci.yml  docs.yml  integration.yml  mirror.yml  mutation.yml  pr-automation.yml  release.yml  scorecard.yml  update-changelog.yml
.nicegui/: storage-user-40ac797c-c78a-4bdc-90c6-7078c38f39f8.json  storage-user-455de4d8-70ed-495f-bc72-b11b6dbec5e3.json  storage-user-702d5fc1-2342-44cc-a78c-0d92c07ded54.json
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  job.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml.example  service.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  GPU_INTEGRATION_TESTS.md  README.md  STYLE_GUIDE.md  USER_GUIDE.md  e2e-playwright-spec.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/diagrams/: mermaid-config-light.json  mermaid-config.json  setup-k8s.mmd  setup-linux.mmd  setup-mac.mmd  setup-nas.mmd
docs-site/docs/: faq.md  intro.md  quick-start.md  troubleshooting.md
docs-site/docs/cli/: generate.md  hardware.md  music.md  overview.md  people-years.md  reference.md  runs.md  scheduler.md  titles.md
docs-site/docs/configuration/: advanced.md  authentication.md  config-file.md  env-variables.md  time-periods.md
docs-site/docs/contribute/: code-of-conduct.md  development-setup.md  testing.md
docs-site/docs/contributing/: testing.md
docs-site/docs/create/: first-memory.md  first-memory.mdx
docs-site/docs/features/: architecture.md  audio-ducking.md  clip-selection.md  duplicate-detection.md  face-aware-cropping.md  live-photos.md  llm-analysis.md  llm-titles.md  map-animation.md  photo-support.md  privacy-mode.md  scene-detection.md  smart-clip-selection.md  title-screens.md  trip-detection.md  trip-memories.md
docs-site/docs/guides/: automation.md  best-practices.md  birthday-compilation.md  first-video.md
docs-site/docs/hardware/: amd-vaapi.md  apple-silicon.md  cpu-only.md  intel-qsv.md  nvidia.md  overview.md
docs-site/docs/installation/: docker.md  kubernetes.md  pip.md  terraform.md  uv.md
docs-site/docs/music/: ace-step.md  custom-music.md  llm-setup.md  multi-provider.md  musicgen.md  overview.md
docs-site/docs/reference/: architecture.md  cli-reference.md  config-reference.md  faq.md  troubleshooting.md
docs-site/docs/ui-walkthrough/: overview.md  step1-configuration.md  step2-clip-review.md  step3-generation-options.md  step4-preview-export.md
docs-site/docs/welcome/: built-with-ai.md  overview.md  overview.mdx  quick-start.md  why-immich-memories.md  why-immich-memories.mdx
docs-site/remotion/: .gitignore  package-lock.json  package.json
docs-site/remotion/public/: screenshots
docs-site/remotion/src/: Composition.tsx  Root.tsx  fonts.ts  theme.ts
docs-site/scripts/: assemble-demo.sh  blur-faces.ts  demo-cli.tape  record-demo.ts  take-screenshots.ts
docs-site/src/components/: ThemedScreenshot.tsx  Video.tsx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs/plans/: 2026-03-09-openai-compatible-llm-backend-design.md  2026-03-09-openai-compatible-llm-backend-plan.md
docs/superpowers/plans/: 2026-03-14-llm-title-generation.md  (+1 more)
references/: ai-security-prompts.md  tools-checklist.md
scripts/: assemble-demo.py  critique_tests.py  demo_map_video.py  demo_maps.py  generate-demo-music.py  generate_cli_docs.py  merge_junit_xml.py  pip_audit_smart.py  preview_saxon_switzerland.py  preview_trip_titles.py  preview_trip_videos.py  simulate-cli-demo.py  test_llm_titles.py  test_overnight_stops.py  test_overnight_stops_all_assets.py  validate_local_audio.py
src/immich_memories/: __init__.py  cli.py  config.py  config_loader.py  config_models.py  config_models_auth.py  config_models_extra.py  generate.py  generate_clips.py  generate_downloads.py  generate_music.py  generate_photos.py  generate_privacy.py  generate_settings.py  i18n.py  logging_config.py  preflight.py  security.py  timeperiod.py
tests/: __init__.py  assembly-coverage.xml  audio-coverage.xml  auth-coverage.xml  automation-coverage.xml  cli-coverage.xml  conftest.py  e2e-coverage.xml  integration-coverage.xml  integration-junit.xml  live-photos-coverage.xml  perf-results-pipeline.json  perf-results-steps.json  perf-results-titles-substeps.json  perf-results-titles.json  perf-results.json  photos-coverage.xml  pipeline-coverage.xml  processing-coverage.xml  test_ace_step_backend.py  test_ace_step_prompts.py  test_acestep_lyrics.py  test_analysis_coverage.py  test_api_client.py  test_api_retry.py  test_api_upload.py  test_assembler_integration.py  test_assembler_unit.py  test_asset_score_cache.py  test_audio.py  test_audio_mixer.py  test_audio_models.py  test_auth_basic.py  test_auth_config.py  test_auth_header.py  test_auth_middleware.py  test_auth_middleware_helpers.py  test_auth_oidc.py  test_auth_session_state.py  test_auto_runner.py  (+127 more)
tests/benchmarks/: test_bench_config.py  test_bench_duplicates.py  test_bench_hashing.py  test_bench_scoring.py  test_bench_title_render.py
tests/e2e/: conftest.py  redaction.py  test_auth_flow.py  test_demo_recording.py  test_full_generation.py  test_oidc_flow.py  test_screenshots.py
tests/integration/: conftest.py  immich_fixtures.py  test_assembly_real.py  test_cli_generate.py  test_generate_scenarios.py
tests/test_memory_types/: test_date_builders.py  test_factory.py  test_registry_presets.py
(+428 files in other folders)
