[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "immich-memories"
dynamic = ["version"]
description = "Turn your Immich photo library into video memory compilations with music and smart cuts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Immich Memories Contributors" }
]
keywords = ["immich", "video", "memories", "compilation", "photo-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nicegui>=2.4.0",
    "moviepy>=1.0.3",
    "scenedetect[opencv]>=0.6",
    "opencv-python>=4.9",
    "videohash>=3.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "pillow>=12.1.1",
    "numpy>=1.24",
    "imagehash>=4.3",
    "watchdog>=3.0",
]

[project.optional-dependencies]
face = [
    "face-recognition>=1.3",
    "dlib>=19.24",
]
# Mac-specific dependencies for GPU-accelerated processing
mac = [
    "pyobjc-core>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Vision>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=9.0; sys_platform == 'darwin'",
]
# Audio metadata for local music library
audio = [
    "mutagen>=1.47",
]
# ML-based audio content analysis (laughter/speech detection)
# PANNs replaces TensorFlow/YAMNet — same AudioSet classes, pure PyTorch
audio-ml = [
    "torch>=2.0",
    "panns-inference>=0.1",
]
# GPU-accelerated title rendering with Taichi
# Supports: Metal (macOS), CUDA (NVIDIA), Vulkan, OpenGL, CPU fallback
gpu = [
    "taichi>=1.7.0",
    "freetype-py>=2.4",  # SDF font rendering
]
# All cross-platform optional features
all = [
    "immich-memories[face]",
    "immich-memories[audio]",
    "immich-memories[audio-ml]",
    "immich-memories[gpu]",
]
# All features for macOS (includes Apple Vision framework)
all-mac = [
    "immich-memories[face]",
    "immich-memories[audio]",
    "immich-memories[audio-ml]",
    "immich-memories[mac]",
    "immich-memories[gpu]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "commitizen>=3.0",
    "python-semantic-release>=9.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
immich-memories = "immich_memories.cli:main"

[project.urls]
Homepage = "https://github.com/sam-dumont/immich-video-memory-generator"
Documentation = "https://sam-dumont.github.io/immich-video-memory-generator/"
Repository = "https://github.com/sam-dumont/immich-video-memory-generator"
Issues = "https://github.com/sam-dumont/immich-video-memory-generator/issues"
Changelog = "https://github.com/sam-dumont/immich-video-memory-generator/releases"

[tool.hatch.version]
source = "vcs"
# On non-tagged commits: 0.1.0.dev1+g1234567
# On tagged commits: 0.1.0

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # For PyPI compatibility

[tool.hatch.build.hooks.vcs]
version-file = "src/immich_memories/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_memories"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.semantic_release.version"]
version = "0.2.0"
tag_format = "v{version}"
branch = "main"
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches."rc"]
match = "rc/*"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.branches."dev"]
match = "(dev|develop|feature)/*"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
template_dir = ".github/templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^ci:",
    "^Merge",
]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = true
lstrip_blocks = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
upload_to_pypi = false  # PyPI publishing handled by GitHub Actions trusted publishers

# Commitizen configuration for conventional commits
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true

[tool.uv]
# Only resolve dependencies for the current platform to avoid cross-platform issues
# with platform-specific packages like pyobjc
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'", "sys_platform == 'win32'"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = ["src/immich_memories/_version.py"]  # Auto-generated by hatch-vcs

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # contextlib.suppress - often less readable
    "SIM115", # context manager for temp files - false positives with delete=False
    "ARG001", # unused function argument - often needed for interface compliance
    "ARG002", # unused method argument - often needed for interface compliance
    "B904",   # raise from - not always needed for simple re-raises
    "S603",   # subprocess call with non-literal args - we validate paths via security.py
    "S607",   # partial executable path - we use standard system binaries (ffmpeg, ffprobe)
    "S101",   # assert used - fine for non-security assertions in application code
    "S311",   # pseudo-random generators - not used for security purposes
    "S301",   # pickle - not used but would flag stdlib imports
    "S110",   # try-except-pass - used for cleanup/fallback paths
    "S112",   # try-except-continue - used for best-effort processing
]

[tool.ruff.lint.isort]
known-first-party = ["immich_memories"]

[tool.ruff.lint.per-file-ignores]
# app.py needs logging configured before other imports
"src/immich_memories/ui/app.py" = ["E402"]
# mixer.py has bottom-of-file re-exports to avoid circular imports with mixer_helpers/mixer_class
"src/immich_memories/audio/mixer.py" = ["E402", "I001"]
# Tests use hardcoded /tmp paths as dummy values, not actual temp file usage
"tests/**" = ["S108"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
strict = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "moviepy.*",
    "scenedetect.*",
    "videohash.*",
    "face_recognition.*",
    "imagehash.*",
    "mutagen.*",
    # macOS frameworks (PyObjC)
    "Vision.*",
    "Quartz.*",
    "CoreImage.*",
    "Metal.*",
    "objc.*",
    # PANNs / PyTorch (optional for audio content analysis)
    "torch.*",
    "panns_inference.*",
    # Taichi (GPU rendering)
    "taichi.*",
    # Not-yet-implemented modules
    "immich_memories.cache.*",
    # Optional audio dependencies
    "soundfile.*",
    "acestep.*",
    # SDF font rendering
    "freetype.*",
    # PyAV (optional video processing)
    "av.*",
    # Streamlit runtime (optional UI)
    "streamlit.runtime.scriptrunner.*",
]
ignore_missing_imports = true

# OpenCV has incomplete type stubs, especially for CUDA
[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true
ignore_errors = true

# Files using OpenCV CUDA functions with incomplete stubs
[[tool.mypy.overrides]]
module = [
    "immich_memories.analysis.scenes",
    "immich_memories.analysis.scoring",
    "immich_memories.analysis.scoring_motion",
    "immich_memories.analysis.scoring_face",
    "immich_memories.analysis.apple_vision",
    "immich_memories.processing.transforms",
    "immich_memories.processing._transforms_smart_crop",
    "immich_memories.processing.scaling_utilities",
]
disable_error_code = ["attr-defined", "call-overload", "union-attr", "assignment", "misc", "has-type"]

# API client with dynamic JSON responses
[[tool.mypy.overrides]]
module = [
    "immich_memories.api.immich",
    "immich_memories.api.client_search",
    "immich_memories.api.client_person",
    "immich_memories.api.client_asset",
]
disable_error_code = ["attr-defined", "arg-type", "return-value"]

# Streamlit UI with dynamic session state
[[tool.mypy.overrides]]
module = [
    "immich_memories.ui.components",
    "immich_memories.ui.app",
    "immich_memories.ui.pages._step4_music",
]
disable_error_code = ["assignment", "misc", "arg-type", "import-untyped", "attr-defined"]

# Audio mood analyzer with dynamic LLM outputs
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.mood_analyzer",
    "immich_memories.audio.mood_analyzer_backends",
]
disable_error_code = ["dict-item"]

# Audio content analyzer with PANNs (split into mixins)
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.content_analyzer",
    "immich_memories.audio.panns_analysis",
    "immich_memories.audio.energy_analysis",
]
disable_error_code = ["attr-defined", "assignment", "misc", "has-type"]

# Audio music generator with dynamic callbacks
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.music_generator",
    "immich_memories.audio.music_generator_client",
]
disable_error_code = ["valid-type", "misc", "call-arg"]

# Audio mixer with optional path types
[[tool.mypy.overrides]]
module = ["immich_memories.audio.mixer_class"]
disable_error_code = ["assignment"]

# Video cache with Immich client compatibility
[[tool.mypy.overrides]]
module = ["immich_memories.cache.video_cache"]
disable_error_code = ["attr-defined"]

# Taichi GPU renderers (uses Taichi-specific type annotations)
[[tool.mypy.overrides]]
module = [
    "immich_memories.titles.renderer_taichi",
    "immich_memories.titles.sdf_font",
    "immich_memories.titles.taichi_kernels",
    "immich_memories.titles.sdf_font_rendering",
    "immich_memories.titles.taichi_video",
]
disable_error_code = ["valid-type", "assignment", "misc", "truthy-function", "union-attr", "import-untyped"]

# Taichi mixin files accessing parent class attributes
[[tool.mypy.overrides]]
module = [
    "immich_memories.titles.taichi_text",
    "immich_memories.titles.taichi_particles",
]
disable_error_code = ["attr-defined", "truthy-function", "assignment", "has-type"]

# PIL renderer with optional font types (split into mixins)
[[tool.mypy.overrides]]
module = [
    "immich_memories.titles.renderer_pil",
    "immich_memories.titles.text_rendering",
    "immich_memories.titles.ending_mixin",
]
disable_error_code = ["attr-defined", "arg-type", "union-attr", "has-type"]

# Title video encoding with optional subprocess pipes
[[tool.mypy.overrides]]
module = ["immich_memories.titles.video_encoding"]
disable_error_code = ["union-attr", "arg-type"]

# Title rendering mixin with optional Taichi imports
[[tool.mypy.overrides]]
module = ["immich_memories.titles.rendering_mixin"]
disable_error_code = ["assignment", "misc", "attr-defined"]

# Unified analyzer with complex audio analysis
[[tool.mypy.overrides]]
module = ["immich_memories.analysis.unified_analyzer"]
disable_error_code = ["var-annotated", "assignment", "attr-defined"]

# Title generator with optional Taichi imports
[[tool.mypy.overrides]]
module = ["immich_memories.titles.generator"]
disable_error_code = ["assignment", "misc"]

# Video assembler mixins (access parent class attributes via mixin pattern)
[[tool.mypy.overrides]]
module = [
    "immich_memories.processing.assembly",
    "immich_memories.processing.assembler_helpers",
    "immich_memories.processing.assembler_encoding",
    "immich_memories.processing.assembler_strategies",
    "immich_memories.processing.assembler_scalable",
    "immich_memories.processing.assembler_batch",
    "immich_memories.processing.assembler_concat",
    "immich_memories.processing.assembler_audio",
    "immich_memories.processing.assembler_probing",
    "immich_memories.processing.assembler_transitions",
    "immich_memories.processing.assembler_transition_render",
    "immich_memories.processing.assembler_titles",
]
disable_error_code = ["attr-defined"]

# Clip encoding with dynamic hardware detection
[[tool.mypy.overrides]]
module = ["immich_memories.processing.clip_encoding"]
disable_error_code = ["attr-defined"]

# Cache mixins (access parent class _get_connection via mixin pattern)
[[tool.mypy.overrides]]
module = [
    "immich_memories.cache.database_migrations",
    "immich_memories.cache.database_queries",
]
disable_error_code = ["attr-defined"]

# Tracking mixins (access parent class _get_connection via mixin pattern)
[[tool.mypy.overrides]]
module = [
    "immich_memories.tracking.run_queries",
    "immich_memories.tracking.active_jobs_mixin",
]
disable_error_code = ["attr-defined"]

# Analysis pipeline mixins (access parent class attributes via mixin pattern)
[[tool.mypy.overrides]]
module = [
    "immich_memories.analysis.pipeline_analysis",
    "immich_memories.analysis.pipeline_refinement",
    "immich_memories.analysis.pipeline_preview",
    "immich_memories.analysis.candidate_generation",
    "immich_memories.analysis.analyzer_factory",
    "immich_memories.analysis.smart_pipeline",
]
disable_error_code = ["attr-defined", "arg-type", "return-value"]

# Pandas is optional for UI
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/immich_memories"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
